fix: fix styling on visibility filter

--- a/src/components/VisbilityFilter/styles.module.css
+++ b/src/components/VisbilityFilter/styles.module.css
@@ -27,6 +27,7 @@
   color: #efefef;
   padding: 0.5rem 0.5rem;
   cursor: pointer;
+  z-index: 1;
 }
 
 .bold {
